fix(modal): adapt modal z-index to overlap sticky title-bar

--- a/packages/Modal/default/src/modal.scss
+++ b/packages/Modal/default/src/modal.scss
@@ -3,7 +3,7 @@
 // stylelint-disable selector-class-pattern
 .ReactModal__Overlay {
   animation: fademodal 0.1s linear;
-  z-index: 3;
+  z-index: 111;
   overflow: auto;
   &--after-open {
     background: rgba($color-azur, 0.62) !important;
